Ensure inventory search is visible

--- a/woocommerce/inventory.css
+++ b/woocommerce/inventory.css
@@ -1,3 +1,6 @@
+.select2-container--default {
+  width:100% !important
+}
 .select2-selection {
   background-color:#f8f8f8 !important;
   border-color:#e1e1e1 !important;
